try quick fix select tag size on mobile browser

--- a/src/styles/selectMatchweek.css
+++ b/src/styles/selectMatchweek.css
@@ -12,6 +12,8 @@
 .select-matchweek.opened {
     position: absolute;
     border-radius: 0;
+    size: 6!important;
+    min-height: 150px;
 }
 
 .select-matchweek::-webkit-scrollbar {
